--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 :root {
+  /* VARIABLES */
+  --c-background:grey;
+  
+
+  /* END OF VARIABLE */
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -22,13 +27,6 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
 
 h1 {
   font-size: 3.2em;
